# TP_C

./: CMakeLists.txt  README.md
Exercise 1/: Exercise1.docx
Exercise 2/: Exercise2.docx
Exercise 3/: Exercise3.docx
Exercise 4/: Exercise4.docx
Exercise 5/: Exercise5.docx
UMLs/: Exercise1.mdj  Exercise2.mdj  Exercise3.mdj  Exercise4.mdj  Exercise5.mdj
src/: CMakeLists.txt  main.c
src/Ej1/: CMakeLists.txt  Catalogue.c  Catalogue.h  HouseholdAppliance.c  HouseholdAppliance.h
src/Ej2/: CMakeLists.txt
src/Ej4/: CMakeLists.txt
src/Ex1/: CMakeLists.txt  Cart.c  Cart.h  Catalogue.c  Catalogue.h  EJ1Test.c  HouseholdAppliance.c  HouseholdAppliance.h  LineCart.c  LineCart.h  LineTicket.c  LineTicket.h  Manufacturer.c  Manufacturer.h  Provider.c  Provider.h  Ticket.c  Ticket.h
src/Ex2/: Accessory.c  Accessory.h  CMakeLists.txt  Camera.c  Camera.h  LineSale.c  LineSale.h  Manufacturer.c  Manufacturer.h  Manufacturer2.c  Manufacturer2.h  Provider.c  Provider.h  Provider2.c  Provider2.h  RegisteredUser.c  RegisteredUser.h  Sale.c  Sale.h
src/Ex3/: Borrowing.c  Borrowing.h  CMakeLists.txt  Library.c  Library.h  Material.c  Material.h  Person.c  Person.h
src/Ex4/: Bill.c  Bill.h  CMakeLists.txt  Client.c  Client.h  Receptionist.c  Receptionist.h  Reservation.c  Reservation.h  Room.c  Room.h
src/Ex5/: Administrator.c  Administrator.h  CMakeLists.txt  Client.c  Client.h  Client2.c  Client2.h  Rental.c  Rental.h  Surplus.c  Surplus.h
