cmake_minimum_required(VERSION 3.6)
add_subdirectory(Ex1)
add_subdirectory(Ex2)
add_subdirectory(Ex3)
add_subdirectory(Ex4)
add_subdirectory(Ex5)
add_executable(exe main.c)
target_link_libraries(exe ex1)
target_link_libraries(exe ex2)
target_link_libraries(exe ex3)
target_link_libraries(exe ex4)
target_link_libraries(exe ex5)